--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="delivery__slider-container">
               <ul class="delivery__slider-track">
-                <li class="delivery__slider-item">
+                <li id="firstActive" class="delivery__slider-item">
                   <h4 class="delivery__delivery-method">Почта России, курьер — 24-26 сент.</h4>
                   <p class="deliveru__place-name">ул. Академика Королева, 73/3, Петропавловск- Камчатский, 683000</p>
                   <p class="delivery__adres-price">+367 ₽</p>
@@ -42,7 +42,7 @@
             <button type="button" class="delivery__add-adres-button"><p class="delivery__add-adres-text">Выбрать новое место и способ</p></button>
             <div class="deliveri__date-container">
               <div class="delivery__article-container">
-                <article class="delivery__timing">
+                <article id="secondActive" class="delivery__timing">
                 <p id="first__date" class="delivery__timing-date">пн, 24 сен — ср, 26 сен</p>
                 <p class="delivery__time">10:00–19:00</p>
               </article>
